<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/welcome_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/USE_PEF_ENTRY"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/LinearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45" />

    <Button
        android:id="@+id/Submit_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.411" />

    <LinearLayout
        android:id="@+id/LinearLayout"
        android:layout_width="319dp"
        android:layout_height="184dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/Submit_Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_message">

        <EditText
            android:id="@+id/PEFNumber"
            style="@style/Base.Theme.SmartAir"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:height="48dp"
            android:autofillHints="Enter a number"
            android:hint="@string/enter_your_pef_number"
            android:inputType="number" />

        <EditText
            android:id="@+id/preMed"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:ems="10"
            android:hint="@string/enter_pre_med_info_optional"
            android:inputType="text" />

        <EditText
            android:id="@+id/postMed"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:ems="10"
            android:hint="Enter Post Med Info (Optional)"
            android:inputType="text" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>