<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".view.RoleSelectionActivity">

    <LinearLayout
        android:id="@+id/Questions_layout"
        android:layout_width="414dp"
        android:layout_height="663dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SafetyNote_layout">

        <LinearLayout
            android:id="@+id/Q1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/Q1_Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Q1"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/colour_of_your_lips"
                android:textSize="20dp" />

            <LinearLayout
                android:id="@+id/Options1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/greyLips"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Grey" />

                <RadioButton
                    android:id="@+id/blueLips"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Blue" />

                <RadioButton
                    android:id="@+id/otherLips"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Other" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Q2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/Q2_Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:hint="Does your chest feel like it is pulling?"
                android:textSize="20dp" />

            <LinearLayout
                android:id="@+id/Options2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/yesChest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Yes" />

                <RadioButton
                    android:id="@+id/NoChest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="No" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Q3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/Q3_Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/can_you_speak_full_sentences"
                android:textSize="20dp" />

            <LinearLayout
                android:id="@+id/Options3"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/yesSpeak"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/yes"
                    android:textSize="20dp" />

                <RadioButton
                    android:id="@+id/noSpeak"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/no"
                    android:textSize="20dp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Q4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/Q4_Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/colour_of_your_nails"
                android:textSize="20dp" />

            <LinearLayout
                android:id="@+id/Options4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/greyNails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:height="48dp"
                    android:text="@string/grey"
                    android:textSize="20dp" />

                <RadioButton
                    android:id="@+id/blueNails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:height="48dp"
                    android:text="@string/blue"
                    android:textSize="20dp" />

                <RadioButton
                    android:id="@+id/otherNails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/other"
                    android:textSize="20dp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Q5"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/Q5_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/have_you_used_rescue_attempts"
                android:textSize="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/noAttempts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="No" />

                <EditText
                    android:id="@+id/ifYes"
                    android:layout_width="104dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number"
                    android:hint="@string/if_yes_enter_number"
                    android:textSize="20dp" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Q6"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/currentPEF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:hint="Enter Current PEF:"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Space
                android:layout_width="61dp"
                android:layout_height="50dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/submitButton"
                android:layout_width="117dp"
                android:layout_height="68dp"
                android:layout_weight="1"
                android:text="Submit" />

            <Space
                android:layout_width="67dp"
                android:layout_height="50dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button5"
                android:layout_width="132dp"
                android:layout_height="65dp"
                android:layout_weight="1"
                android:text="No Symtoms" />

            <Space
                android:layout_width="94dp"
                android:layout_height="50dp"
                android:layout_weight="1" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/SafetyNote_layout"
        android:layout_width="402dp"
        android:layout_height="57dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/SafetyNote"
            android:layout_width="332dp"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="text"
            android:text="This is guidance, not a diagnosis. If in doubt, call emergency."
            android:textSize="12sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/helpButton"
            android:layout_width="71dp"
            android:layout_height="69dp"
            android:text="@string/help"
            android:textColorLink="#FB0707"
            android:textIsSelectable="false"
            android:textSize="20dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>